namespaces/cloud-platform-live-0.k8s.integration.dsd.io/laa-apply-for-legalaid-redcjump/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-apply-for-legalaid-redcjump
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Legal Aid Agency"
    cloud-platform.justice.gov.uk/application: "laa-apply-for-legalaid-redcjump"
    cloud-platform.justice.gov.uk/owner: "Stephen Richards: apply@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "git@github.com:ministryofjustice/laa-apply-for-legal-aid.git"
